--- a/cfg/eval_cfg/DanceTrack.yaml
+++ b/cfg/eval_cfg/DanceTrack.yaml
@@ -37,8 +37,7 @@ gt_structure_config:
   gt_loc_format: '{data_root}/{split_name}/{seq_name}/{gt_folder_name}/{gt_txt_name}'
 
 tracker_structure_config:
-  # trackers_folder: './result/dancetrack_MambaTrack/val'
-  trackers_folder: '/data/Project/MOT_Methods/TBDTracker/results_tracked/dance-fromdet-byteKF'
+  trackers_folder: './results_tracked/dancetrack-val/sort/fromdet-KF'
   has_split: True
   split_name: val
   has_tracker_name: False
@@ -46,7 +45,7 @@ tracker_structure_config:
 
 
 # other options
-OUTPUT_FOLDER: './track_eval_output'   # Where to save eval results (if None  same as TRACKERS_FOLDER)
+OUTPUT_SUB_FOLDER: 'trackeval'    # Where to save eval results (if None  same as TRACKERS_FOLDER)
 
 SEQ_INFO:  null # seq_name: seq_length
 
